PA3/cool.output
Terminals unused in grammar

   IN
   LET
   ERROR


State 9 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 47 conflicts: 13 shift/reduce
State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    6 dummy_feature_list: /* empty */
    7                   | feature ';'
    8                   | dummy_feature_list feature ';'

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expr

   12 formal_list: /* empty */
   13            | formal
   14            | formal_list ',' formal

   15 formal: OBJECTID ':' TYPEID

   16 expr_list: /* empty */
   17          | expr ';'
   18          | expr_list expr ';'

   19 para_expr_list: /* empty */
   20               | expr
   21               | para_expr_list ',' expr

   22 expr: OBJECTID ASSIGN expr
   23     | expr '.' OBJECTID '(' para_expr_list ')'
   24     | OBJECTID '(' para_expr_list ')'
   25     | expr '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_list '}'
   29     | CASE expr OF case_list ESAC
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST

   46 case_list: /* empty */
   47          | case
   48          | case_list case

   49 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 23 24 25 41
')' (41) 9 23 24 25 41
'*' (42) 34
'+' (43) 32
',' (44) 14 21
'-' (45) 33
'.' (46) 23 25
'/' (47) 35
':' (58) 9 10 11 15 49
';' (59) 4 5 7 8 17 18 49
'<' (60) 37
'=' (61) 39
'@' (64) 25
'{' (123) 4 5 9 28
'}' (125) 4 5 9 28
'~' (126) 36
error (256)
CLASS (258) 4 5
ELSE (259) 26
FI (260) 26
IF (261) 26
IN (262)
INHERITS (263) 5
LET (264)
LOOP (265) 27
POOL (266) 27
THEN (267) 26
WHILE (268) 27
CASE (269) 29
ESAC (270) 29
OF (271) 29
DARROW (272) 49
NEW (273) 30
ISVOID (274) 31
STR_CONST (275) 44
INT_CONST (276) 43
BOOL_CONST (277) 45
TYPEID (278) 4 5 9 10 11 15 25 30 49
OBJECTID (279) 9 10 11 15 22 23 24 25 42 49
ASSIGN (280) 11 22
NOT (281) 40
LE (282) 38
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
dummy_feature_list (49)
    on left: 6 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11, on right: 7 8
formal_list (51)
    on left: 12 13 14, on right: 9 14
formal (52)
    on left: 15, on right: 13 14
expr_list (53)
    on left: 16 17 18, on right: 18 28
para_expr_list (54)
    on left: 19 20 21, on right: 21 23 24 25
expr (55)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45, on right: 9 11 17 18 20 21 22 23 25 26 27 29
    31 32 33 34 35 36 37 38 39 40 41 49
case_list (56)
    on left: 46 47 48, on right: 29 48
case (57)
    on left: 49, on right: 47 48


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (dummy_feature_list)]
    $default  reduce using rule 6 (dummy_feature_list)

    dummy_feature_list  go to state 12
    feature             go to state 13


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 14


state 11

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID . ':' TYPEID
   11        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


state 12

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 17

    feature  go to state 18


state 13

    7 dummy_feature_list: feature . ';'

    ';'  shift, and go to state 19


state 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (dummy_feature_list)]
    $default  reduce using rule 6 (dummy_feature_list)

    dummy_feature_list  go to state 20
    feature             go to state 13


state 15

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 22
    formal       go to state 23


state 16

   10 feature: OBJECTID ':' . TYPEID
   11        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 24


state 17

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 25


state 18

    8 dummy_feature_list: dummy_feature_list feature . ';'

    ';'  shift, and go to state 26


state 19

    7 dummy_feature_list: feature ';' .

    $default  reduce using rule 7 (dummy_feature_list)


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 27

    feature  go to state 18


state 21

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


state 22

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


state 23

   13 formal_list: formal .

    $default  reduce using rule 13 (formal_list)


state 24

   10 feature: OBJECTID ':' TYPEID .
   11        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 10 (feature)


state 25

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 26

    8 dummy_feature_list: dummy_feature_list feature ';' .

    $default  reduce using rule 8 (dummy_feature_list)


state 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 32


state 28

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


state 29

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 34


state 30

   14 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 21

    formal  go to state 35


state 31

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 49


state 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 33

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


state 34

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 50


state 35

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


state 36

   26 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 51


state 37

   27 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 52


state 38

   29 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 53


state 39

   30 expr: NEW . TYPEID

    TYPEID  shift, and go to state 54


state 40

   31 expr: ISVOID . expr

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 55


state 41

   44 expr: STR_CONST .

    $default  reduce using rule 44 (expr)


state 42

   43 expr: INT_CONST .

    $default  reduce using rule 43 (expr)


state 43

   45 expr: BOOL_CONST .

    $default  reduce using rule 45 (expr)


state 44

   22 expr: OBJECTID . ASSIGN expr
   24     | OBJECTID . '(' para_expr_list ')'
   42     | OBJECTID .

    ASSIGN  shift, and go to state 56
    '('     shift, and go to state 57

    $default  reduce using rule 42 (expr)


state 45

   40 expr: NOT . expr

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 58


state 46

   36 expr: '~' . expr

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 59


state 47

   28 expr: '{' . expr_list '}'

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    IF          [reduce using rule 16 (expr_list)]
    WHILE       [reduce using rule 16 (expr_list)]
    CASE        [reduce using rule 16 (expr_list)]
    NEW         [reduce using rule 16 (expr_list)]
    ISVOID      [reduce using rule 16 (expr_list)]
    STR_CONST   [reduce using rule 16 (expr_list)]
    INT_CONST   [reduce using rule 16 (expr_list)]
    BOOL_CONST  [reduce using rule 16 (expr_list)]
    OBJECTID    [reduce using rule 16 (expr_list)]
    NOT         [reduce using rule 16 (expr_list)]
    '~'         [reduce using rule 16 (expr_list)]
    '{'         [reduce using rule 16 (expr_list)]
    '('         [reduce using rule 16 (expr_list)]
    $default    reduce using rule 16 (expr_list)

    expr_list  go to state 60
    expr       go to state 61


state 48

   41 expr: '(' . expr ')'

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 62


state 49

   11 feature: OBJECTID ':' TYPEID ASSIGN expr .
   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LE   shift, and go to state 63
    '<'  shift, and go to state 64
    '='  shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '@'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 11 (feature)


state 50

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 72


state 51

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   26     | IF expr . THEN expr ELSE expr FI
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    THEN  shift, and go to state 73
    LE    shift, and go to state 63
    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '@'   shift, and go to state 70
    '.'   shift, and go to state 71


state 52

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   27     | WHILE expr . LOOP expr POOL
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    LOOP  shift, and go to state 74
    LE    shift, and go to state 63
    '<'   shift, and go to state 64
    '='   shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '@'   shift, and go to state 70
    '.'   shift, and go to state 71


state 53

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   29     | CASE expr . OF case_list ESAC
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    OF   shift, and go to state 75
    LE   shift, and go to state 63
    '<'  shift, and go to state 64
    '='  shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '@'  shift, and go to state 70
    '.'  shift, and go to state 71


state 54

   30 expr: NEW TYPEID .

    $default  reduce using rule 30 (expr)


state 55

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   31     | ISVOID expr .
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 31 (expr)


state 56

   22 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 76


state 57

   24 expr: OBJECTID '(' . para_expr_list ')'

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 19 (para_expr_list)

    para_expr_list  go to state 77
    expr            go to state 78


state 58

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   40     | NOT expr .

    LE   shift, and go to state 63
    '<'  shift, and go to state 64
    '='  shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '@'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 40 (expr)


state 59

   23 expr: expr . '.' OBJECTID '(' para_expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' para_expr_list ')'
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   36     | '~' expr .
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr

    '@'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 36 (expr)


state 60

   18 expr_list: expr_list . expr ';'
   28 expr: '{' expr_list . '}'
